k8s-main-01/argocd/resources/argocd-repo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    spec:
#      volumes:
#        - name: custom-tools
#          emptyDir: {}
#      initContainers:
#        - name: download-tools
#          image: alpine:3.8
#          command: [ sh, -c ]
#          args:
#            - >-
#              wget -O argocd-vault-plugin
#              https://github.com/IBM/argocd-vault-plugin/releases/download/v1.2.0/argocd-vault-plugin_1.2.0_linux_amd64 &&
#              chmod +x argocd-vault-plugin &&
#              mv argocd-vault-plugin /custom-tools
#          volumeMounts:
#            - mountPath: /custom-tools
#              name: custom-tools
#      nodeSelector:
#        kubernetes.io/arch: amd64
      containers:
      - name: argocd-repo-server
        command:
          - entrypoint.sh
          - argocd-repo-server
          - --logformat
          - json
          - --loglevel
          - warn
          - --redis
          - argocd-redis:6379
#        volumeMounts:
#          - mountPath: /usr/local/bin/argocd-vault-plugin
#            name: custom-tools
#            subPath: argocd-vault-plugin
#        envFrom:
#          - secretRef:
#              name: argocd-vault-plugin-credentials
