k8s-main-01/argocd/resources/argocd-server.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: argocd-server
#spec:
#  template:
#    spec:
#      nodeSelector:
#        kubernetes.io/arch: amd64
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.1.199
  type: LoadBalancer
