k8s-main-01/argocd/resources/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ing
  labels:
    name: argocd-server
  annotations:
    # https://argoproj.github.io/argo-cd/operator-manual/ingress/
    kubernetes.io/ingress.class: haproxy
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/tls-acme: 'true'
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      proxy_set_header l5d-dst-override argocd-server.argocd.svc.cluster.local:80;
#      proxy_hide_header l5d-remote-ip;
#      proxy_hide_header l5d-server-id;
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - argocd.mymarshall5.com
      secretName: argocd-mymarshall5-com
  rules:
    - host: argocd.mymarshall5.com
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd-server
              servicePort: 443
#---
#apiVersion: cert-manager.io/v1alpha3
#kind: Certificate
#metadata:
#  name: mymarshall5-com
#spec:
#  commonName: mymarshall5.com
#  dnsNames:
#    - mymarshall5.com
#    - '*.mymarshall5.com'
#  issuerRef:
#    kind: ClusterIssuer
#    name: letsencrypt-prod
#  secretName: mymarshall5-com
